# neo-ai-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  NEO_2.0_ENHANCEMENT_REGISTER.md  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a3f7c1b8e2d9_conversation_agent_name.py  b2e5f7a1c9d3_chat_persistence.py  b7e3d9a1f2c4_document_chunks_chunker.py  c3d4e5f6a7b8_documents_original_storage.py  c9f4e2b7d8a5_memory_and_preferences.py  d5e6f7a8b9c0_ocr_provenance.py  d68d0f6a4fa8_identity_and_tenancy.py  e7d9c1a2b3f4_tenant_workflows.py  f4a1c2d3e5b6_documents.py  f9c8a2b1d3e4_create_neo_app_role_and_grants.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py
apps/api/app/ai/agents/: __init__.py  registry.py  runner.py
apps/api/app/ai/documents/: __init__.py  block_aware.py  chunker.py  dispatch.py  docx.py  ingest.py  mock.py  pdf.py  text.py
apps/api/app/ai/extractors/: __init__.py  mock.py
apps/api/app/ai/memory/: __init__.py
apps/api/app/application/: __init__.py
apps/api/app/core/: __init__.py  exceptions.py  middleware.py
apps/api/app/domain/: __init__.py
apps/api/app/presentation/: __init__.py
apps/api/app/shared/: __init__.py
apps/api/scripts/: create_user.py
apps/api/tests/: conftest.py  test_agent_permissions.py  test_agent_runner.py  test_agents.py  test_anthropic_provider.py  test_auth_endpoints.py  test_block_aware_chunker.py  test_chat.py  test_chat_persistence.py  test_chat_stream.py  test_chat_txn_discipline.py  test_conversation_management.py  test_conversations.py  test_create_user.py  test_document_ingest.py  test_document_search_api.py  test_document_storage.py  test_documents.py  test_documents_api.py  test_docx_parser.py  test_emails.py  test_embedding_provider_build.py  test_embeddings_mock.py  test_error_handling.py  test_memories_api.py  test_memory_persistence.py  test_memory_retrieval.py  test_memory_write.py  test_models.py  test_n8n_workflow_client.py  test_ocr_pdf.py  test_ocr_provenance.py  test_ollama_embedding_provider.py  test_parse_harness.py  test_passwords.py  test_pdf_parser.py  test_rls_isolation.py  test_search_documents_tool.py  test_search_memory_tool.py  test_stream_tool_loop.py  (+11 more)
docs/: roadmap.md  (+1 more)
(+157 files in other folders)
